# lazyf-rs

./: Cargo.toml  readme.md
src/: brace.rs  cfg.rs  flag.rs  get.rs  lib.rs  lz_err.rs  lzlist.rs  string.rs  tests.rs
src/test_data/: lztest.lz
test_data/: lztest.lz  lztest2.lz
