[package]
name = "lazyf"
version = "0.1.3"
authors = ["coderconvoy <thebeaky@psmail.net>"]
description = "A simple means for grabbing config from flags and config files with a lazy, human readable, file format."
repository = "https://github.com/storyfeet/lazyf-rs"

license = "MIT"
keywords = ["config","file","loader","lazy","flag"]

[dependencies]
